[package]
name = "src"
version = "0.1.0"
authors = ["galtashma <galtashma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
pretty-hex = "0.2.1"
libc = "0.2.94"
libafl = { path = "./LibAFL/libafl" }
serde = "1.0.125"
log = "*"
env_logger = "0.8.3"
hexdump = "0.1.0"
